perf: lighthouse optimisation and image stretch bug fix

--- a/src/app/blog/blog-list/blog-card/blog-card.component.scss
+++ b/src/app/blog/blog-list/blog-card/blog-card.component.scss
@@ -10,9 +10,7 @@
     width: 100px;
     min-width: 30%;
     .blog__image {
-      display: flex;
-      align-self: flex-start;
-      max-width: 100%;
+      width: 100%;
       height: 100%;
       object-fit: cover;
       border-radius: 0.5rem;
